--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ull-esit-inf-dsi-22-23-prct10-fs-proc-sockets-funko-app-juancarlosrey",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "ejercicio-1/ejercicio1.js",
   "type": "commonjs",
   "scripts": {
     "start": "tsc-watch --onSuccess \"node dist/index.js\"",
