--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.4",
+    "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
     "@types/yargs": "^17.0.23",
@@ -37,6 +38,7 @@
     "chalk": "^4.1.2",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "express": "^4.18.2",
     "yargs": "^17.7.1"
   }
 }
