--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
+    "@types/request": "^2.48.8",
     "@types/yargs": "^17.0.23",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
@@ -39,6 +40,7 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
+    "request": "^2.88.2",
     "yargs": "^17.7.1"
   }
 }
