--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ull-esit-inf-dsi-22-23-prct10-fs-proc-sockets-funko-app-juancarlosrey",
+  "name": "dsi-laboratorio12-pe103-juancarlosrey",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -40,6 +40,7 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
+    "mongodb": "^5.3.0",
     "request": "^2.88.2",
     "yargs": "^17.7.1"
   }
